[workspace]
resolver = "2"
members = [
  "admin",
  "api-client",
  "cargo-shuttle",
  "codegen",
  "common",
  "runtime",
  "service",
]
exclude = [
  "examples",
  "resources",
  "services",
]

[workspace.package]
version = "0.51.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/shuttle-hq/shuttle"

[workspace.dependencies]
shuttle-api-client = { path = "api-client", version = "0.51.0", default-features = false }
shuttle-codegen = { path = "codegen", version = "0.51.0" }
shuttle-common = { path = "common", version = "0.51.0" }
shuttle-service = { path = "service", version = "0.51.0" }

anyhow = "1.0.66"
async-trait = "0.1.58"
axum = { version = "0.6.13", default-features = false }
bollard = "0.15.0"
cargo_metadata = "0.18.1"
chrono = { version = "0.4.34", default-features = false }
clap = { version = "4.2.7", features = ["derive"] }
comfy-table = "6.2.0"
crossterm = "0.27.0"
dirs = "5.0.0"
dunce = "1.0.4"
futures = "0.3.27"
headers = "0.3.8"
http = "0.2.8"
hyper = "0.14.23"
percent-encoding = "2.2"
portpicker = "0.1.1"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls"] }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.148", default-features = false }
serde_json = "1.0.89"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls"] }
strfmt = "0.2.2"
strum = { version = "0.26.1", features = ["derive"] }
tempfile = "3.4.0"
thiserror = "2"
tokio = "1.22.0"
tokio-tungstenite = { version = "0.20.1", features = [
  "rustls-tls-webpki-roots",
] }
toml = "0.8.2"
toml_edit = "0.20.2"
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
  "registry",
  "json",
] }
typeshare = "1.0.3"
url = "2.5.4"
zeroize = "1.6.0"
