[workspace]
resolver = "2"
members = [
  "admin",
  "api-client",
  "cargo-shuttle",
  "codegen",
  "common",
  "runtime",
  "service",
]
exclude = ["examples", "resources", "services"]

[workspace.package]
version = "0.53.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/shuttle-hq/shuttle"

[workspace.dependencies]
shuttle-api-client = { path = "api-client", version = "0.53.0", default-features = false }
shuttle-codegen = { path = "codegen", version = "0.53.0" }
shuttle-common = { path = "common", version = "0.53.0" }
shuttle-service = { path = "service", version = "0.53.0" }

anyhow = "1.0.66"
assert_cmd = "2.0.6"
async-trait = "0.1.58"
axum = { version = "0.8.1", default-features = false }
bollard = { version = "0.18.1", features = ["ssl_providerless"] }
cargo_metadata = "0.19.1"
chrono = { version = "0.4.34", default-features = false }
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.3.1"
clap_mangen = "0.2.15"
comfy-table = "7.1.3"
crossterm = "0.28.1"
dialoguer = { version = "0.11", default-features = false }
dirs = "6.0.0"
dunce = "1.0.4"
futures = "0.3.27"
git2 = { version = "0.20.0", default-features = false }
gix = { version = "0.70.0", default-features = false }
globset = "0.4.13"
headers = "0.4.0"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = "1"
hyper-util = { version = "0.1.10", features = ["full"] }
ignore = "0.4.20"
indicatif = "0.17.3"
indoc = "2.0.1"
percent-encoding = "2.2"
portpicker = "0.1.1"
pretty_assertions = "1.3.0"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.89"
quote = "1.0.21"
regex = "1.9.5"
reqwest = { version = "0.12.14", default-features = false, features = [
  "rustls-tls",
] }
reqwest-middleware = "0.4.0"
rexpect = "0.6.0"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.148", default-features = false }
serde_json = "1.0.89"
strfmt = "0.2.2"
strum = { version = "0.27.1", features = ["derive"] }
syn = "2.0"
tempfile = "3.4.0"
thiserror = "2"
tokio = "1.40.0"
tokio-tungstenite = { version = "0.26.1", features = [
  "rustls-tls-webpki-roots",
] }
toml = "0.8.2"
toml_edit = "0.22.22"
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
  "registry",
  "json",
] }
trybuild = "1.0.72"
typeshare = "1.0.3"
utoipa = "5"
url = "2.5.4"
walkdir = "2.3.3"
webbrowser = "1.0.1"
zeroize = "1.6.0"
zip = "2.3.0"
