[package]
name = "shuttle-admin"
version = "0.11.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["env"] }
dirs = "4.0.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = ["default", "env-filter"] }

[dependencies.shuttle-common]
workspace = true
features = ["models"]
