[package]
name = "shuttle-admin"
version = "0.45.0"
edition = "2021"
publish = false

[dependencies]
shuttle-common = { workspace = true, features = ["models"] }
shuttle-backends = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["env"] }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = { workspace = true }
tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = ["default", "env-filter"] }
