[package]
name = "shuttle-api-client"
version = "0.48.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A library for interacting with the Shuttle platform API"
homepage = "https://www.shuttle.rs"

[dependencies]
shuttle-common = { workspace = true, features = ["models"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
reqwest-middleware = "0.2.5"
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

task-local-extensions = { version = "0.1.4", optional = true }
tracing = { workspace = true, features = ["default"], optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:task-local-extensions"]
