[package]
name = "shuttle-api-client"
version = "0.53.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A library for interacting with the Shuttle platform API (https://www.shuttle.dev)"
homepage = "https://www.shuttle.dev"

[dependencies]
shuttle-common = { workspace = true, features = ["models"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
reqwest-middleware = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true }
url = { workspace = true }

tracing = { workspace = true, features = ["default"], optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
