[package]
name = "shuttle-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
cookie = { version = "0.17.0", features = ["signed"] }
hmac = "0.12.1"
http = { workspace = true }
jsonwebtoken = { workspace = true }
opentelemetry = { workspace = true }
ring = { workspace = true }
sha2 = "0.10.2"
sqlx = { workspace = true, features = [
    "sqlite",
    "json",
    "runtime-tokio-rustls",
    "migrate",
] }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[dependencies.shuttle-common]
workspace = true
features = ["backend", "models", "persist"]

[dependencies.shuttle-proto]
workspace = true

[dev-dependencies]
portpicker = { workspace = true }
pretty_assertions = { workspace = true }
