[package]
name = "shuttle-auth"
version = "0.35.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shuttle-common = { workspace = true, features = [
    "backend",
    "models",
    "persist",
] }

anyhow = { workspace = true }
async-stripe = { version = "0.25.1", default-features = false, features = ["checkout", "runtime-tokio-hyper-rustls"] }
async-trait = { workspace = true }
axum = { workspace = true, features = ["headers"] }
axum-sessions = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
opentelemetry = { workspace = true }
pem = "2"
rand = { workspace = true }
ring = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres", "json", "migrate"] }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum-extra = { version = "0.7.1", features = ["cookie"] }
ctor = { workspace = true }
hyper = { workspace = true }
once_cell = { workspace = true }
portpicker = { workspace = true }
serde_json = { workspace = true }
shuttle-common-tests = { workspace = true }
tower = { workspace = true, features = ["util"] }
