[package]
name = "shuttle-auth"
version = "0.43.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
shuttle-backends = { workspace = true }
shuttle-common = { workspace = true, features = ["models", "persist"] }

anyhow = { workspace = true }
async-stripe = { version = "0.25.1", default-features = false, features = ["checkout", "runtime-tokio-hyper-rustls"] }
async-trait = { workspace = true }
axum = { workspace = true, features = ["headers", "tokio"] }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
opentelemetry = { workspace = true }
pem = "2"
ring = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres", "json", "migrate", "chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
axum-extra = { version = "0.7.1" }
ctor = { workspace = true }
hyper = { workspace = true }
once_cell = { workspace = true }
portpicker = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
shuttle-backends = { workspace = true, features = ["test-utils"] }
shuttle-common-tests = { workspace = true }
tower = { workspace = true, features = ["util"] }
wiremock = { workspace = true }
