[package]
name = "shuttle-backends"
version = "0.42.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
shuttle-common = { workspace = true, features = ["claims", "models"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
hyper = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-otlp = { workspace = true }
pin-project = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
# keep locked to not accidentally invalidate someone's project name
rustrict = { version = "=0.7.12" }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true, features = ["std"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"]}
ttl_cache = { workspace = true }
wiremock = { workspace = true, optional = true }

[features]
test-utils = ["wiremock"]

[dev-dependencies]
axum = { workspace = true, features = ["matched-path"] }
base64 = { workspace = true }
hyper = { workspace = true }
jsonwebtoken = { workspace = true }
proptest = "1.1.0"
ring = { workspace = true }
test-context = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
tracing-fluent-assertions = "0.3.0"
tracing-subscriber = { workspace = true }
wiremock = { workspace = true }
