[package]
name = "shuttle-builder"
version = "0.38.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shuttle-common = { workspace = true, features = ["backend", "tonic"] }
shuttle-proto = { workspace = true, features = ["builder"] }

async-trait = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
nbuild-core = "0.1.2"
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "io-util",
    "process",
    "rt-multi-thread",
] }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["default"] }
os_pipe = "1.1.4"
ulid = { workspace = true }

[dev-dependencies]
hex = "0.4.3"
portpicker = { workspace = true }
pretty_assertions = { workspace = true }
shuttle-common-tests = { workspace = true }
