[package]
name = "shuttle-builder"
version = "0.56.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Docker build recipes for the Shuttle platform (shuttle.dev)"
homepage = "https://www.shuttle.dev"

[dependencies]
shuttle-common = { workspace = true, features = ["models"] }

askama = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
