[package]
name = "cargo-shuttle"
version = "0.51.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the Shuttle platform (shuttle.dev)"
homepage = "https://www.shuttle.dev"
default-run = "shuttle"

[dependencies]
shuttle-api-client = { workspace = true, default-features = true }
shuttle-common = { workspace = true, features = ["models", "tables"] }
shuttle-service = { workspace = true, features = ["builder"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
bollard = { workspace = true }
cargo_metadata = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["env"] }
clap_complete = "4.3.1"
clap_mangen = "0.2.15"
crossterm = { workspace = true }
dialoguer = { version = "0.11", default-features = false, features = ["password"] }
dirs = { workspace = true }
dunce = { workspace = true }
futures = { workspace = true }
git2 = { version = "0.19.0", default-features = false }
gix = { version = "0.67.0", default-features = false, features = [
  "blocking-http-transport-reqwest-rust-tls",
  "worktree-mutation",
] }
globset = "0.4.13"
# TODO: make local provisioner server use these:
# http = "1"
# http-body-util = "0.1"
# hyper-1 = { package = "hyper", version = "1.0", features = ["full"] }
# hyper-util = { version = "0.1.10", features = ["full"] }
hyper = { workspace = true }
ignore = "0.4.20"
indicatif = "0.17.3"
indoc = "2.0.1"
portpicker = { workspace = true }
regex = "1.9.5"
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = [
  "default",
  "env-filter",
  "fmt",
] }
url = { workspace = true }
walkdir = "2.3.3"
webbrowser = "1.0.1"
zip = "2.2.0"

[dev-dependencies]
assert_cmd = "2.0.6"
rexpect = "0.6.0"
