[package]
name = "cargo-shuttle"
version = "0.51.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the Shuttle platform (shuttle.dev)"
homepage = "https://www.shuttle.dev"
default-run = "shuttle"

[dependencies]
shuttle-api-client = { workspace = true, default-features = true }
shuttle-common = { workspace = true, features = ["models", "tables"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
bollard = { workspace = true }
cargo_metadata = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["env"] }
clap_complete = "4.3.1"
clap_mangen = "0.2.15"
crossterm = { workspace = true }
dialoguer = { version = "0.11", default-features = false, features = [
  "password",
] }
dirs = { workspace = true }
dunce = { workspace = true }
futures = { workspace = true }
git2 = { version = "0.20.0", default-features = false }
gix = { version = "0.69.1", default-features = false, features = [
  "blocking-http-transport-reqwest-rust-tls",
  "worktree-mutation",
] }
globset = "0.4.13"
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true }
ignore = "0.4.20"
indicatif = "0.17.3"
indoc = "2.0.1"
portpicker = { workspace = true }
regex = "1.9.5"
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "process",
  "sync",
  "time",
] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = [
  "default",
  "env-filter",
  "fmt",
] }
url = { workspace = true }
walkdir = "2.3.3"
webbrowser = "1.0.1"
zip = "2.2.0"

[dev-dependencies]
assert_cmd = "2.0.6"
rexpect = "0.6.0"
