[package]
name = "cargo-shuttle"
version = "0.57.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the Shuttle platform (shuttle.dev)"
homepage = "https://www.shuttle.dev"
default-run = "shuttle"

[dependencies]
shuttle-api-client = { workspace = true, default-features = true }
shuttle-builder = { workspace = true }
shuttle-common = { workspace = true, features = ["models", "tables", "config"] }
shuttle-ifc = { workspace = true }
shuttle-mcp = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
bollard = { workspace = true }
cargo_metadata = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["env"] }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
crossterm = { workspace = true }
dialoguer = { workspace = true, features = ["password"] }
dirs = { workspace = true }
dunce = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
gix = { workspace = true, features = [
  "blocking-http-transport-reqwest-rust-tls",
  "worktree-mutation",
] }
globset = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true }
ignore = { workspace = true }
indicatif = { workspace = true }
indoc = { workspace = true }
portpicker = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "process",
  "sync",
  "time",
] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = [
  "default",
  "env-filter",
  "fmt",
] }
url = { workspace = true }
walkdir = { workspace = true }
webbrowser = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
rexpect = { workspace = true }
