[package]
name = "cargo-unveil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
dirs = "4.0.0"
lib = { path = "../lib/" }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
cargo = "0.59.0"
toml = "0.5.8"
structopt = "0.3.26"