[package]
name = "shuttle-codegen"
version = "0.50.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro code generator for the shuttle.rs service"

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.89"
quote = "1.0.21"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shuttle-common-tests = { path = "../common-tests" }
trybuild = "1.0.72"
tokio = { version = "1", features = ["full"] }

[features]
default = []
