[package]
name = "shuttle-codegen"
version = "0.55.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro code generator for the Shuttle platform (shuttle.dev)"
homepage = "https://www.shuttle.dev"

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
trybuild = { workspace = true }
