[package]
name = "shuttle-common-tests"
version = "0.48.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
cargo-shuttle = { path = "../cargo-shuttle" }
shuttle-common = { workspace = true, features = ["models"] }
shuttle-proto = { workspace = true, features = [
    "logger-client",
    "resource-recorder-client",
    "provisioner-client",
] }

hyper = { workspace = true }
portpicker = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
