[package]
name = "shuttle-common-tests"
version = "0.51.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
cargo-shuttle = { path = "../cargo-shuttle" }
shuttle-common = { workspace = true, features = ["models"] }

portpicker = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
