[package]
name = "shuttle-common"
version = "0.52.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Common library for the Shuttle platform (shuttle.dev)"
homepage = "https://www.shuttle.dev"
# Base MSRV for the Shuttle crates. If some other crate has a higher MSRV, set it in that crate.
rust-version = "1.81"

[dependencies]
axum = { workspace = true, features = ["json"], optional = true }
chrono = { workspace = true }
comfy-table = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
http = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true, features = ["std"], optional = true }
typeshare = { workspace = true }
zeroize = { workspace = true }

[features]
# main features
models = ["chrono/serde", "dep:tracing"]

# additional sub-features
axum = ["dep:axum", "dep:tracing"]
display = ["chrono/clock", "dep:crossterm"]
tables = ["models", "display", "dep:comfy-table"]

# internal / utility features
integration-tests = []

[package.metadata.docs.rs]
features = [
    # main features
    "models",
    # additional sub-features
    "axum",
    "display",
    "tables",
]
