[package]
name = "shuttle-common"
version = "0.54.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Common library for the Shuttle platform (shuttle.dev)"
homepage = "https://www.shuttle.dev"
# Base MSRV for the Shuttle crates. If some other crate has a higher MSRV, set it in that crate.
rust-version = "1.81"

[dependencies]
anyhow = { workspace = true, optional = true }
axum = { workspace = true, features = ["json"], optional = true }
chrono = { workspace = true }
comfy-table = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
http = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
toml = { workspace = true, optional = true }
tracing = { workspace = true, features = ["std"], optional = true }
typeshare = { workspace = true }
utoipa = { workspace = true, features = ["chrono"], optional = true }
zeroize = { workspace = true }

[dev-dependencies]
rstest = "0.24.0"

[features]
# main features
models = ["chrono/serde", "dep:tracing"]
config = ["anyhow", "dirs", "toml"]

# additional sub-features
axum = ["dep:axum", "dep:tracing"]
display = ["chrono/clock", "dep:crossterm"]
tables = ["models", "display", "dep:comfy-table"]
unknown-variants = [] # add fallback to Unknown variant on enum model deser
utoipa = ["dep:utoipa"] # derive OpenAPI definitions for models

# internal / utility features
integration-tests = []

[package.metadata.docs.rs]
features = [
    # main features
    "models",
    # additional sub-features
    "axum",
    "display",
    "tables",
]
